--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
     </div>
   </header>
   <section>
+    <div class="div-espaço">
     <img class="espaço" src="imagens/espaco.jpg" alt="">
+    </div>
     <div class="blank">
       <div class="texto1">
         <div class="titulo1">
